--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,11 +16,25 @@ spring:
             scope: openid, https://www.googleapis.com/auth/userinfo.profile, https://www.googleapis.com/auth/userinfo.email
             client-name: Sign in with Google
           github:
-            client-id: ${GITHUB_CLIENT_ID:google-client-id}
-            client-secret: ${GITHUB_CLIENT_SECRET:google-client-secret}
+            client-id: ${GITHUB_CLIENT_ID:github-client-id}
+            client-secret: ${GITHUB_CLIENT_SECRET:github-client-secret}
             scope: user:email, read:user
             client-name: Sign in with GitHub
+          vk:
+            provider: vk
+            client-id: ${VK_CLIENT_ID:vk-client-id}
+            client-secret: ${VK_CLIENT_SECRET:vk-client-secret}
+            redirect-uri: ${VK_REDIRECT_URI:vk-redirect-uri}
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            scope: email, wall
         provider:
+          vk:
+            #revoke=1 needs to always show vk dialog
+            authorization-uri: https://oauth.vk.com/authorize?revoke=1
+            token-uri: https://oauth.vk.com/access_token
+            user-info-uri: https://api.vk.com/method/users.get?v=5.133&fields=photo_max
+            user-name-attribute: email
           google:
             user-name-attribute: email
           github:
@@ -30,6 +44,6 @@ logging:
   level:
     root: INFO
     org.springframework.web: INFO
-    org.springframework.security: INFO
-    org.springframework.security.oauth2: INFO
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
 #    org.springframework.boot.autoconfigure: DEBUG
