--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,6 +28,13 @@ spring:
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             scope: email, wall
+          yandex:
+            provider: yandex
+            client-id: ${YANDEX_CLIENT_ID:yandex-client-id}
+            client-secret: ${YANDEX_CLIENT_SECRET:yandex-client-secret}
+            redirect-uri: ${YANDEX_REDIRECT_URI:yandex-redirect-uri}
+            authorization-grant-type: authorization_code
+            scope: login:birthday, login:email, login:info, login:avatar
         provider:
           vk:
             #revoke=1 needs to always show vk dialog
@@ -35,6 +42,11 @@ spring:
             token-uri: https://oauth.vk.com/access_token
             user-info-uri: https://api.vk.com/method/users.get?v=5.133&fields=photo_max
             user-name-attribute: email
+          yandex:
+            authorization-uri: https://oauth.yandex.ru/authorize
+            token-uri: https://oauth.yandex.ru/token
+            user-info-uri: https://login.yandex.ru/info
+            user-name-attribute: default_email
           google:
             user-name-attribute: email
           github:
